--- a/index.html
+++ b/index.html
@@ -3,28 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Meu Primeiro Site</title>
+  <title>Achados Shoppe Luan</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #222;
       color: #eee;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
       margin: 0;
+      text-align: center;
+      padding: 20px;
     }
-    h1 {
+    img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 10px;
+    }
+    .frase {
+      font-size: 1.4em;
       color: #1abc9c;
-    }
-    p {
-      font-size: 1.2em;
+      margin-bottom: 30px;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
+  <img src="https://i.pinimg.com/originals/1c/6c/cf/1c6ccf570c4d7027f9ecb4e9682d278a.jpg" alt="Imagem topo" />
+  <div class="frase">Só as peças pura pra vocês ficarem raul de verdade</div>
+
+  <!-- O resto do conteúdo do site aqui -->
+  
   <h1>Olá, mundo!</h1>
   <p>Esse é meu primeiro site no GitHub!</p>
 </body>
