--- a/index.html
+++ b/index.html
@@ -36,3 +36,6 @@
   <p>Esse é meu primeiro site no GitHub!</p>
 </body>
 </html>
+git add index.html
+git commit -m "Adiciona imagem e frase no topo"
+git push origin main
