--- a/index.html
+++ b/index.html
@@ -6,36 +6,111 @@
   <title>Achados Shoppe Luan</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #222;
-      color: #eee;
       margin: 0;
-      text-align: center;
-      padding: 20px;
+      font-family: Arial, sans-serif;
+      background-color: #fff; /* Fundo branco */
+      color: #000; /* Letras pretas */
+      font-weight: bold; /* Negrito em tudo */
     }
-    img {
+
+    /* Banner fixo */
+    .banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #fff;
+      z-index: 1000;
+      text-align: center;
+      padding-bottom: 10px;
+      border-bottom: 2px solid #000;
+    }
+
+    .banner img {
       max-width: 100%;
       height: auto;
-      margin-bottom: 10px;
+      display: block;
     }
+
     .frase {
-      font-size: 1.4em;
-      color: #1abc9c;
-      margin-bottom: 30px;
+      padding: 10px;
+      font-size: 1.3em;
+      color: #000;
+    }
+
+    /* Compensar o banner fixo */
+    .conteudo {
+      padding-top: 320px;
+    }
+
+    /* Estilo dos slots de produto */
+    .produtos {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      padding: 20px;
+    }
+
+    .produto {
+      background-color: #f5f5f5;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      width: 180px;
+      padding: 15px;
+      text-align: center;
+      transition: transform 0.2s;
+      color: #000;
+    }
+
+    .produto:hover {
+      transform: scale(1.05);
+    }
+
+    .produto img {
+      max-width: 100%;
+      border-radius: 5px;
+    }
+
+    .produto h3,
+    .produto p {
+      color: #000;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <img src="https://i.pinimg.com/originals/1c/6c/cf/1c6ccf570c4d7027f9ecb4e9682d278a.jpg" alt="Imagem topo" />
-  <div class="frase">Só as peças pura pra vocês ficarem raul de verdade</div>
+  <!-- Banner fixo com imagem e frase -->
+  <div class="banner">
+    <img src="https://i.pinimg.com/originals/1c/6c/cf/1c6ccf570c4d7027f9ecb4e9682d278a.jpg" alt="Banner" />
+    <div class="frase">Só as peças pura pra vocês ficarem raul de verdade</div>
+  </div>
 
-  <!-- O resto do conteúdo do site aqui -->
-  
-  <h1>Olá, mundo!</h1>
-  <p>Esse é meu primeiro site no GitHub!</p>
+  <!-- Conteúdo abaixo do banner -->
+  <div class="conteudo">
+    <div class="produtos">
+      <!-- Slots de produtos -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 1">
+        <h3>Produto 1</h3>
+        <p>Descrição do produto.</p>
+      </div>
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 2">
+        <h3>Produto 2</h3>
+        <p>Descrição do produto.</p>
+      </div>
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 3">
+        <h3>Produto 3</h3>
+        <p>Descrição do produto.</p>
+      </div>
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 4">
+        <h3>Produto 4</h3>
+        <p>Descrição do produto.</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
-git add index.html
-git commit -m "Adiciona imagem e frase no topo"
-git push origin main
