--- a/index.html
+++ b/index.html
@@ -208,3 +208,123 @@
   </div>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Achados Shoppe Luan</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #fff;
+      color: #000;
+      font-weight: bold;
+    }
+
+    .banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #fff;
+      z-index: 1000;
+      text-align: center;
+      padding-bottom: 10px;
+      border-bottom: 2px solid #000;
+    }
+
+    .banner img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+    }
+
+    .frase {
+      padding: 10px;
+      font-size: 1.3em;
+      color: #000;
+    }
+
+    .conteudo {
+      padding-top: 320px;
+    }
+
+    .produtos {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr); /* 2 colunas */
+      gap: 20px;
+      padding: 20px;
+      max-width: 900px;
+      margin: 0 auto;
+    }
+
+    .produto {
+      background-color: #f5f5f5;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 15px;
+      text-align: center;
+      transition: transform 0.2s;
+    }
+
+    .produto:hover {
+      transform: scale(1.05);
+    }
+
+    .produto img {
+      max-width: 100%;
+      border-radius: 5px;
+    }
+
+    .produto h3,
+    .produto p {
+      color: #000;
+      font-weight: bold;
+    }
+
+    .produto a {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 12px;
+      background-color: #000;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 4px;
+      font-weight: bold;
+    }
+
+    .produto a:hover {
+      background-color: #333;
+    }
+
+    @media (max-width: 600px) {
+      .produtos {
+        grid-template-columns: 1fr; /* Em celular, 1 por linha */
+      }
+    }
+  </style>
+</head>
+<body>
+  <div class="banner">
+    <img src="https://i.pinimg.com/originals/1c/6c/cf/1c6ccf570c4d7027f9ecb4e9682d278a.jpg" alt="Banner" />
+    <div class="frase">Só as peças pura pra vocês ficarem raul de verdade</div>
+  </div>
+
+  <div class="conteudo">
+    <div class="produtos">
+      <!-- Produtos 1 a 20 -->
+      <!-- Substitua os links e imagens conforme desejar -->
+      ${[...Array(20)].map((_, i) => `
+        <div class="produto">
+          <img src="https://via.placeholder.com/150" alt="Produto ${i + 1}">
+          <h3>Produto ${i + 1}</h3>
+          <p>Descrição do produto ${i + 1}</p>
+          <a href="#" target="_blank">Ver produto</a>
+        </div>
+      `).join('')}
+    </div>
+  </div>
+</body>
+</html>
