--- a/index.html
+++ b/index.html
@@ -42,221 +42,11 @@
     }
 
     .produtos {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      padding: 20px;
-    }
-
-    .produto {
-      background-color: #f5f5f5;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      width: 45%;
-      max-width: 250px;
-      padding: 15px;
-      text-align: center;
-      transition: transform 0.2s;
-    }
-
-    .produto:hover {
-      transform: scale(1.05);
-    }
-
-    .produto img {
-      max-width: 100%;
-      border-radius: 5px;
-    }
-
-    .produto h3,
-    .produto p {
-      color: #000;
-      font-weight: bold;
-    }
-
-    .produto a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 8px 12px;
-      background-color: #000;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 4px;
-      font-weight: bold;
-    }
-
-    .produto a:hover {
-      background-color: #333;
-    }
-
-    @media (max-width: 600px) {
-      .produto {
-        width: 100%;
-      }
-    }
-  </style>
-</head>
-<body>
-  <div class="banner">
-    <img src="https://i.pinimg.com/originals/1c/6c/cf/1c6ccf570c4d7027f9ecb4e9682d278a.jpg" alt="Banner" />
-    <div class="frase">Só as peças pura pra vocês ficarem raul de verdade</div>
-  </div>
-
-  <div class="conteudo">
-    <div class="produtos">
-      <!-- Produto 1 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 1">
-        <h3>Produto 1</h3>
-        <p>Descrição do produto 1</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 2 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 2">
-        <h3>Produto 2</h3>
-        <p>Descrição do produto 2</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 3 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 3">
-        <h3>Produto 3</h3>
-        <p>Descrição do produto 3</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 4 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 4">
-        <h3>Produto 4</h3>
-        <p>Descrição do produto 4</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 5 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 5">
-        <h3>Produto 5</h3>
-        <p>Descrição do produto 5</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 6 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 6">
-        <h3>Produto 6</h3>
-        <p>Descrição do produto 6</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 7 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 7">
-        <h3>Produto 7</h3>
-        <p>Descrição do produto 7</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 8 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 8">
-        <h3>Produto 8</h3>
-        <p>Descrição do produto 8</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 9 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 9">
-        <h3>Produto 9</h3>
-        <p>Descrição do produto 9</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 10 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 10">
-        <h3>Produto 10</h3>
-        <p>Descrição do produto 10</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 11 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 11">
-        <h3>Produto 11</h3>
-        <p>Descrição do produto 11</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 12 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 12">
-        <h3>Produto 12</h3>
-        <p>Descrição do produto 12</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>
-
-      <!-- Produto 13 ao 20 -->
-      <!-- Pode copiar e colar mais blocos conforme for mandando os links -->
-
-    </div>
-  </div>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Achados Shoppe Luan</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      color: #000;
-      font-weight: bold;
-    }
-
-    .banner {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      background-color: #fff;
-      z-index: 1000;
-      text-align: center;
-      padding-bottom: 10px;
-      border-bottom: 2px solid #000;
-    }
-
-    .banner img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .frase {
-      padding: 10px;
-      font-size: 1.3em;
-      color: #000;
-    }
-
-    .conteudo {
-      padding-top: 320px;
-    }
-
-    .produtos {
       display: grid;
-      grid-template-columns: repeat(2, 1fr); /* 2 colunas */
+      grid-template-columns: repeat(2, 1fr);
       gap: 20px;
       padding: 20px;
-      max-width: 900px;
+      max-width: 1000px;
       margin: 0 auto;
     }
 
@@ -270,7 +60,7 @@
     }
 
     .produto:hover {
-      transform: scale(1.05);
+      transform: scale(1.03);
     }
 
     .produto img {
@@ -301,7 +91,7 @@
 
     @media (max-width: 600px) {
       .produtos {
-        grid-template-columns: 1fr; /* Em celular, 1 por linha */
+        grid-template-columns: 1fr;
       }
     }
   </style>
@@ -314,16 +104,21 @@
 
   <div class="conteudo">
     <div class="produtos">
-      <!-- Produtos 1 a 20 -->
-      <!-- Substitua os links e imagens conforme desejar -->
+      <!-- 20 produtos -->
+      <!-- Repita esse bloco trocando imagem, nome e link -->
+      <!-- Produto 1 a 20 -->
+      <!-- Você pode alterar a imagem, descrição e link conforme for -->
+
+      <!-- Exemplo de bloco -->
+      <!-- Copie e edite conforme precisar -->
       ${[...Array(20)].map((_, i) => `
-        <div class="produto">
-          <img src="https://via.placeholder.com/150" alt="Produto ${i + 1}">
-          <h3>Produto ${i + 1}</h3>
-          <p>Descrição do produto ${i + 1}</p>
-          <a href="#" target="_blank">Ver produto</a>
-        </div>
-      `).join('')}
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto ${i + 1}">
+        <h3>Produto ${i + 1}</h3>
+        <p>Descrição do produto ${i + 1}</p>
+        <a href="#" target="_blank">Ver produto</a>
+      </div>`).join('')}
+
     </div>
   </div>
 </body>
