Atualizar o index.html
atualiza

--- a/index.html
+++ b/index.html
@@ -104,20 +104,169 @@
 
   <div class="conteudo">
     <div class="produtos">
-      <!-- 20 produtos -->
-      <!-- Repita esse bloco trocando imagem, nome e link -->
-      <!-- Produto 1 a 20 -->
-      <!-- Você pode alterar a imagem, descrição e link conforme for -->
 
-      <!-- Exemplo de bloco -->
-      <!-- Copie e edite conforme precisar -->
-      ${[...Array(20)].map((_, i) => `
+      <!-- Produto 1 ao 20 -->
+      <!-- Substitua imagem, título, descrição e link conforme necessário -->
+
+      <!-- Produto 1 -->
       <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto ${i + 1}">
-        <h3>Produto ${i + 1}</h3>
-        <p>Descrição do produto ${i + 1}</p>
-        <a href="#" target="_blank">Ver produto</a>
-      </div>`).join('')}
+        <img src="https://via.placeholder.com/150" alt="Produto 1">
+        <h3>Produto 1</h3>
+        <p>Descrição do produto 1</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 2 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 2">
+        <h3>Produto 2</h3>
+        <p>Descrição do produto 2</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 3 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 3">
+        <h3>Produto 3</h3>
+        <p>Descrição do produto 3</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 4 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 4">
+        <h3>Produto 4</h3>
+        <p>Descrição do produto 4</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 5 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 5">
+        <h3>Produto 5</h3>
+        <p>Descrição do produto 5</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 6 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 6">
+        <h3>Produto 6</h3>
+        <p>Descrição do produto 6</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 7 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 7">
+        <h3>Produto 7</h3>
+        <p>Descrição do produto 7</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 8 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 8">
+        <h3>Produto 8</h3>
+        <p>Descrição do produto 8</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 9 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 9">
+        <h3>Produto 9</h3>
+        <p>Descrição do produto 9</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 10 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 10">
+        <h3>Produto 10</h3>
+        <p>Descrição do produto 10</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 11 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 11">
+        <h3>Produto 11</h3>
+        <p>Descrição do produto 11</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 12 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 12">
+        <h3>Produto 12</h3>
+        <p>Descrição do produto 12</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 13 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 13">
+        <h3>Produto 13</h3>
+        <p>Descrição do produto 13</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 14 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 14">
+        <h3>Produto 14</h3>
+        <p>Descrição do produto 14</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 15 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 15">
+        <h3>Produto 15</h3>
+        <p>Descrição do produto 15</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 16 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 16">
+        <h3>Produto 16</h3>
+        <p>Descrição do produto 16</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 17 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 17">
+        <h3>Produto 17</h3>
+        <p>Descrição do produto 17</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 18 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 18">
+        <h3>Produto 18</h3>
+        <p>Descrição do produto 18</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 19 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 19">
+        <h3>Produto 19</h3>
+        <p>Descrição do produto 19</p>
+        <a href="#">Ver produto</a>
+      </div>
+
+      <!-- Produto 20 -->
+      <div class="produto">
+        <img src="https://via.placeholder.com/150" alt="Produto 20">
+        <h3>Produto 20</h3>
+        <p>Descrição do produto 20</p>
+        <a href="#">Ver produto</a>
+      </div>
 
     </div>
   </div>
