--- a/index.html
+++ b/index.html
@@ -3,272 +3,90 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Achados Shoppe Luan</title>
+  <title>TikTokPesquisa</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      background-color: #f9f9f9;
       color: #000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+      font-size: 2em;
       font-weight: bold;
     }
 
-    .banner {
-      position: fixed;
-      top: 0;
-      left: 0;
+    .search-box {
+      display: flex;
       width: 100%;
-      background-color: #fff;
-      z-index: 1000;
-      text-align: center;
-      padding-bottom: 10px;
-      border-bottom: 2px solid #000;
+      max-width: 500px;
     }
 
-    .banner img {
-      max-width: 100%;
-      height: auto;
-      display: block;
+    input[type="text"] {
+      flex: 1;
+      padding: 12px 16px;
+      font-size: 1em;
+      border: 2px solid #ccc;
+      border-right: none;
+      border-radius: 8px 0 0 8px;
+      outline: none;
     }
 
-    .frase {
-      padding: 10px;
-      font-size: 1.3em;
-      color: #000;
-    }
-
-    .conteudo {
-      padding-top: 320px;
-    }
-
-    .produtos {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 20px;
-      padding: 20px;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .produto {
-      background-color: #f5f5f5;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 15px;
-      text-align: center;
-      transition: transform 0.2s;
-    }
-
-    .produto:hover {
-      transform: scale(1.03);
-    }
-
-    .produto img {
-      max-width: 100%;
-      border-radius: 5px;
-    }
-
-    .produto h3,
-    .produto p {
-      color: #000;
-      font-weight: bold;
-    }
-
-    .produto a {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 8px 12px;
+    button {
+      padding: 12px 20px;
+      font-size: 1em;
       background-color: #000;
       color: #fff;
-      text-decoration: none;
-      border-radius: 4px;
+      border: none;
+      border-radius: 0 8px 8px 0;
+      cursor: pointer;
       font-weight: bold;
     }
 
-    .produto a:hover {
+    button:hover {
       background-color: #333;
     }
 
-    @media (max-width: 600px) {
-      .produtos {
-        grid-template-columns: 1fr;
-      }
+    .results {
+      margin-top: 40px;
+      max-width: 600px;
+      text-align: left;
     }
   </style>
 </head>
 <body>
-  <div class="banner">
-    <img src="https://i.pinimg.com/originals/1c/6c/cf/1c6ccf570c4d7027f9ecb4e9682d278a.jpg" alt="Banner" />
-    <div class="frase">Só as peças pura pra vocês ficarem raul de verdade</div>
+
+  <h1>TikTokPesquisa</h1>
+
+  <div class="search-box">
+    <input type="text" placeholder="Pesquise algo..." id="searchInput">
+    <button onclick="pesquisar()">Pesquisar</button>
   </div>
 
-  <div class="conteudo">
-    <div class="produtos">
-
-      <!-- Produto 1 ao 20 -->
-      <!-- Substitua imagem, título, descrição e link conforme necessário -->
-
-      <!-- Produto 1 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 1">
-        <h3>Produto 1</h3>
-        <p>Descrição do produto 1</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 2 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 2">
-        <h3>Produto 2</h3>
-        <p>Descrição do produto 2</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 3 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 3">
-        <h3>Produto 3</h3>
-        <p>Descrição do produto 3</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 4 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 4">
-        <h3>Produto 4</h3>
-        <p>Descrição do produto 4</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 5 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 5">
-        <h3>Produto 5</h3>
-        <p>Descrição do produto 5</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 6 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 6">
-        <h3>Produto 6</h3>
-        <p>Descrição do produto 6</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 7 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 7">
-        <h3>Produto 7</h3>
-        <p>Descrição do produto 7</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 8 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 8">
-        <h3>Produto 8</h3>
-        <p>Descrição do produto 8</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 9 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 9">
-        <h3>Produto 9</h3>
-        <p>Descrição do produto 9</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 10 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 10">
-        <h3>Produto 10</h3>
-        <p>Descrição do produto 10</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 11 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 11">
-        <h3>Produto 11</h3>
-        <p>Descrição do produto 11</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 12 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 12">
-        <h3>Produto 12</h3>
-        <p>Descrição do produto 12</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 13 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 13">
-        <h3>Produto 13</h3>
-        <p>Descrição do produto 13</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 14 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 14">
-        <h3>Produto 14</h3>
-        <p>Descrição do produto 14</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 15 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 15">
-        <h3>Produto 15</h3>
-        <p>Descrição do produto 15</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 16 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 16">
-        <h3>Produto 16</h3>
-        <p>Descrição do produto 16</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 17 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 17">
-        <h3>Produto 17</h3>
-        <p>Descrição do produto 17</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 18 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 18">
-        <h3>Produto 18</h3>
-        <p>Descrição do produto 18</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 19 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 19">
-        <h3>Produto 19</h3>
-        <p>Descrição do produto 19</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-      <!-- Produto 20 -->
-      <div class="produto">
-        <img src="https://via.placeholder.com/150" alt="Produto 20">
-        <h3>Produto 20</h3>
-        <p>Descrição do produto 20</p>
-        <a href="#">Ver produto</a>
-      </div>
-
-    </div>
+  <div class="results" id="results">
+    <!-- Resultados vão aparecer aqui -->
   </div>
+
+  <script>
+    function pesquisar() {
+      const termo = document.getElementById('searchInput').value;
+      const resultados = document.getElementById('results');
+      
+      if (termo.trim() === "") {
+        resultados.innerHTML = "<p>Digite algo para pesquisar.</p>";
+      } else {
+        // Aqui é onde futuramente a busca real será feita
+        resultados.innerHTML = `<p>Você pesquisou: <strong>${termo}</strong></p>`;
+      }
+    }
+  </script>
+
 </body>
 </html>
