--- a/index.html
+++ b/index.html
@@ -8,83 +8,121 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #f9f9f9;
-      color: #000;
+      background-color: #ffffff;
+      color: #000000;
+      padding-top: 80px;
+    }
+
+    .banner {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      background-color: #2ecc71;
+      color: white;
+      text-align: center;
+      padding: 20px 0;
+      font-size: 1.8em;
+      font-weight: bold;
+      z-index: 1000;
+    }
+
+    .container {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      min-height: 100vh;
+      justify-content: flex-start;
+      min-height: calc(100vh - 80px);
+      padding: 30px 20px;
     }
 
-    h1 {
-      margin-bottom: 20px;
-      font-size: 2em;
-      font-weight: bold;
-    }
-
-    .search-box {
-      display: flex;
+    .text-input {
       width: 100%;
       max-width: 500px;
-    }
-
-    input[type="text"] {
-      flex: 1;
       padding: 12px 16px;
       font-size: 1em;
       border: 2px solid #ccc;
-      border-right: none;
-      border-radius: 8px 0 0 8px;
-      outline: none;
+      border-radius: 8px;
+      margin-bottom: 30px;
+      box-sizing: border-box;
     }
 
-    button {
-      padding: 12px 20px;
+    .options {
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-bottom: 30px;
+    }
+
+    .option-label {
+      font-weight: bold;
+      font-size: 1.1em;
+      cursor: pointer;
+    }
+
+    .confirm-button {
+      padding: 12px 24px;
       font-size: 1em;
       background-color: #000;
       color: #fff;
       border: none;
-      border-radius: 0 8px 8px 0;
+      border-radius: 8px;
       cursor: pointer;
       font-weight: bold;
     }
 
-    button:hover {
+    .confirm-button:hover {
       background-color: #333;
     }
 
-    .results {
-      margin-top: 40px;
-      max-width: 600px;
-      text-align: left;
+    .result {
+      margin-top: 30px;
+      font-size: 1.1em;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
 
-  <h1>TikTokPesquisa</h1>
+  <div class="banner">TikTokPesquisa</div>
 
-  <div class="search-box">
-    <input type="text" placeholder="Pesquise algo..." id="searchInput">
-    <button onclick="pesquisar()">Pesquisar</button>
-  </div>
+  <div class="container">
+    <input type="text" class="text-input" id="textoDigitado" placeholder="Digite algo aqui...">
 
-  <div class="results" id="results">
-    <!-- Resultados vão aparecer aqui -->
+    <div class="options">
+      <label class="option-label">
+        <input type="radio" name="opcao" value="Opção 1"> Opção 1
+      </label>
+      <label class="option-label">
+        <input type="radio" name="opcao" value="Opção 2"> Opção 2
+      </label>
+      <label class="option-label">
+        <input type="radio" name="opcao" value="Opção 3"> Opção 3
+      </label>
+    </div>
+
+    <button class="confirm-button" onclick="confirmarEscolha()">Confirmar Escolha</button>
+
+    <div class="result" id="resultado"></div>
   </div>
 
   <script>
-    function pesquisar() {
-      const termo = document.getElementById('searchInput').value;
-      const resultados = document.getElementById('results');
-      
-      if (termo.trim() === "") {
-        resultados.innerHTML = "<p>Digite algo para pesquisar.</p>";
-      } else {
-        // Aqui é onde futuramente a busca real será feita
-        resultados.innerHTML = `<p>Você pesquisou: <strong>${termo}</strong></p>`;
+    function confirmarEscolha() {
+      const texto = document.getElementById('textoDigitado').value;
+      const opcaoSelecionada = document.querySelector('input[name="opcao"]:checked');
+      const resultado = document.getElementById('resultado');
+
+      if (!texto.trim()) {
+        resultado.innerText = "Por favor, digite algo.";
+        return;
       }
+
+      if (!opcaoSelecionada) {
+        resultado.innerText = "Por favor, selecione uma opção.";
+        return;
+      }
+
+      resultado.innerText = `Você digitou: "${texto}" e escolheu: ${opcaoSelecionada.value}`;
     }
   </script>
 
