--- a/index.html
+++ b/index.html
@@ -5,137 +5,154 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>SpotifyPesquisa</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      height: 100%;
       font-family: Arial, sans-serif;
-      background-color: #ffffff;
-      color: #000000;
-      padding-top: 100px;
-      padding-bottom: 100px;
+      background-color: white;
+      color: black;
+      display: flex;
+      flex-direction: column;
+      overflow: hidden;
     }
 
     .banner {
-      position: fixed;
-      left: 0;
-      width: 100%;
       background-color: #1DB954;
       color: white;
       text-align: center;
-      padding: 30px 0;
-      font-size: 2em;
       font-weight: bold;
-      z-index: 1000;
-    }
-
-    .banner.topo {
-      top: 0;
-    }
-
-    .banner.rodape {
-      bottom: 0;
-    }
-
-    .container {
+      font-size: 2.5em;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
       align-items: center;
-      justify-content: flex-start;
-      min-height: calc(100vh - 200px);
-      padding: 30px 20px;
+      flex-shrink: 0;
+      height: 33.33vh; /* 1/3 da tela */
+      user-select: none;
     }
 
-    .text-input {
-      width: 100%;
-      max-width: 500px;
-      padding: 12px 16px;
-      font-size: 1em;
-      border: 2px solid #ccc;
-      border-radius: 8px;
-      margin-bottom: 30px;
+    .content {
+      flex-grow: 1;
+      overflow-y: auto;
+      padding: 20px 30px;
       box-sizing: border-box;
     }
 
-    .options {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-      margin-bottom: 30px;
+    h2 {
+      margin-top: 0;
+      margin-bottom: 10px;
     }
 
-    .option-label {
+    .artist {
+      margin-bottom: 40px;
+    }
+
+    .question {
+      margin-bottom: 20px;
+    }
+
+    .question p {
       font-weight: bold;
-      font-size: 1.1em;
+      margin-bottom: 8px;
+    }
+
+    .options label {
+      margin-right: 15px;
       cursor: pointer;
     }
 
-    .confirm-button {
-      padding: 12px 24px;
-      font-size: 1em;
-      background-color: #000;
-      color: #fff;
+    button {
+      background-color: #1DB954;
+      color: white;
+      font-weight: bold;
+      padding: 12px 25px;
       border: none;
-      border-radius: 8px;
+      border-radius: 6px;
       cursor: pointer;
-      font-weight: bold;
-    }
-
-    .confirm-button:hover {
-      background-color: #333;
-    }
-
-    .result {
-      margin-top: 30px;
       font-size: 1.1em;
-      font-weight: bold;
     }
+
+    button:hover {
+      background-color: #14833b;
+    }
+
+    #resultado {
+      margin-top: 30px;
+      font-weight: bold;
+      font-size: 1.2em;
+      color: #1DB954;
+    }
+
   </style>
 </head>
 <body>
 
-  <!-- Banner topo -->
   <div class="banner topo">SpotifyPesquisa</div>
 
-  <!-- Conteúdo -->
-  <div class="container">
-    <input type="text" class="text-input" id="textoDigitado" placeholder="Digite algo aqui...">
+  <div class="content">
+    <div class="artist">
+      <h2>1. Matue</h2>
 
-    <div class="options">
-      <label class="option-label">
-        <input type="radio" name="opcao" value="Opção 1"> Opção 1
-      </label>
-      <label class="option-label">
-        <input type="radio" name="opcao" value="Opção 2"> Opção 2
-      </label>
-      <label class="option-label">
-        <input type="radio" name="opcao" value="Opção 3"> Opção 3
-      </label>
+      <form id="pesquisaForm">
+
+        <div class="question">
+          <p>Recomendaria Matue para algum parente?</p>
+          <div class="options">
+            <label><input type="radio" name="q1" value="Sim" /> Sim</label>
+            <label><input type="radio" name="q1" value="Não" /> Não</label>
+            <label><input type="radio" name="q1" value="Talvez" /> Talvez</label>
+          </div>
+        </div>
+
+        <div class="question">
+          <p>De 0 a 10, quanto você gosta do Matue?</p>
+          <div class="options">
+            <label><input type="radio" name="q2" value="Pouco" /> Pouco</label>
+            <label><input type="radio" name="q2" value="Mais ou Menos" /> Mais ou Menos</label>
+            <label><input type="radio" name="q2" value="Muito" /> Muito</label>
+          </div>
+        </div>
+
+        <div class="question">
+          <p>Você escuta Matue diariamente?</p>
+          <div class="options">
+            <label><input type="radio" name="q3" value="Raramente" /> Raramente</label>
+            <label><input type="radio" name="q3" value="De vez em quando" /> De vez em quando</label>
+            <label><input type="radio" name="q3" value="Todo dia" /> Todo dia</label>
+          </div>
+        </div>
+
+        <button type="button" onclick="enviarPesquisa()">Confirmar Respostas</button>
+      </form>
+
+      <div id="resultado"></div>
     </div>
-
-    <button class="confirm-button" onclick="confirmarEscolha()">Confirmar Escolha</button>
-
-    <div class="result" id="resultado"></div>
   </div>
 
-  <!-- Banner rodapé -->
   <div class="banner rodape">SpotifyPesquisa</div>
 
   <script>
-    function confirmarEscolha() {
-      const texto = document.getElementById('textoDigitado').value.trim();
-      const opcaoSelecionada = document.querySelector('input[name="opcao"]:checked');
+    function enviarPesquisa() {
+      const form = document.getElementById('pesquisaForm');
       const resultado = document.getElementById('resultado');
 
-      if (!texto) {
-        resultado.innerText = "Por favor, digite algo.";
+      // Verifica se todas as perguntas foram respondidas
+      const q1 = form.q1.value;
+      const q2 = form.q2.value;
+      const q3 = form.q3.value;
+
+      if (!q1 || !q2 || !q3) {
+        resultado.style.color = "red";
+        resultado.textContent = "Por favor, responda todas as perguntas antes de confirmar.";
         return;
       }
 
-      if (!opcaoSelecionada) {
-        resultado.innerText = "Por favor, selecione uma opção.";
-        return;
-      }
-
-      resultado.innerText = `Você digitou: "${texto}" e escolheu: ${opcaoSelecionada.value}`;
+      resultado.style.color = "#1DB954";
+      resultado.innerHTML = `
+        Respostas confirmadas!<br />
+        Recomendaria Matue para um parente? <b>${q1}</b><br />
+        Quanto você gosta do Matue? <b>${q2}</b><br />
+        Frequência que escuta Matue: <b>${q3}</b>
+      `;
     }
   </script>
 
